fix(Task):Spacing between content and progress bar

--- a/src/assets/style/base/base.scss
+++ b/src/assets/style/base/base.scss
@@ -19,7 +19,7 @@
 }
 
 .container {
-  padding-top: 20px;
+  // padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
 }
